Fix typo in equation 7

--- a/_notebooks/2022-03-13-how-to-understand-xgboost.ipynb
+++ b/_notebooks/2022-03-13-how-to-understand-xgboost.ipynb
@@ -208,7 +208,7 @@
     "The gain from this split is then\n",
     "\n",
     "$$ \\Delta L = L_{\\text{before split}} -  L_{\\text{after split}} = L - (L_L + L_R)$$\n",
-    "$$\\Delta L = \\frac{1}{2} \\left [ \\frac{ (\\sum_{i \\in I_L} g_i )^2 } {\\sum_{i \\in I_L} h_i + \\lambda} + \\frac{ (\\sum_{i \\in I_R} g_i )^2 } {\\sum_{i \\in I_R} h_i + \\lambda} - \\frac{ (\\sum_{i \\in I_L} g_i )^2 } {\\sum_{i \\in I_L} h_i + \\lambda} \\right ] - \\gamma $$\n",
+    "$$\\Delta L = \\frac{1}{2} \\left [ \\frac{ (\\sum_{i \\in I_L} g_i )^2 } {\\sum_{i \\in I_L} h_i + \\lambda} + \\frac{ (\\sum_{i \\in I_R} g_i )^2 } {\\sum_{i \\in I_R} h_i + \\lambda} - \\frac{ (\\sum_{i \\in I} g_i )^2 } {\\sum_{i \\in I} h_i + \\lambda} \\right ] - \\gamma $$\n",
     "\n",
     "which is Equation (7) from the paper. In practice it makes sense to accept a split only if the gain is positive, thus the $\\gamma$ parameter sets the minimum gain required to make a further split. This is why $\\gamma$ can be set with the parameter `gamma` or the more descriptive`min_loss_split`.\n"
    ]
